gitops-factory/namespaces/payments-svc/shared.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: payments-svc
  labels:
    app.kubernetes.io/name: default-deny-all
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"v1","kind":"redacted"}'
  uid: 95af0293-3aca-4823-87d0-0fa3a22d563f
  resourceVersion: '9516129'
  generation: 4
  creationTimestamp: '2026-07-17T08:11:16Z'
  managedFields:
  - manager: kubectl-client-side-apply
    operation: Update
    apiVersion: v1
    time: '2026-07-17T08:11:16Z'
    fieldsType: FieldsV1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
